--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,8 +1,9 @@
 id: cloudflared
 title: "Cloudflare Tunnel"
-version: 2024.12.2
+version: 2025.1.1
 release-notes: |
-  * Update to cloudflared 2024.12.2 - See [full changelog](https://github.com/cloudflare/cloudflared/blob/2024.12.2/RELEASE_NOTES)
+  * Update to cloudflared 2025.1.1 - See [full changelog](https://github.com/cloudflare/cloudflared/blob/2025.1.1/RELEASE_NOTES)
+  * Update bundling process to use Deno emit module
 license: Apache 2.0
 wrapper-repo: "https://github.com/remcoros/cloudflared-startos"
 upstream-repo: "https://github.com/cloudflare/cloudflared"
