--- a/.github/workflows/releaseService.yml
+++ b/.github/workflows/releaseService.yml
@@ -12,39 +12,44 @@ jobs:
       contents: write
     steps:
       - name: Prepare StartOS SDK
-        uses: Start9Labs/sdk@v1
+        uses: start9Labs/sdk@v2
 
       - name: Checkout services repository
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Build the service package
         run: |
-          git submodule update --init --recursive
-          start-sdk init
-          make
+          start-cli init
+          RUST_LOG=debug RUST_BACKTRACE=1 make
 
       - name: Setting package ID and title from the manifest
         id: package
         run: |
-          echo "package_id=$(yq -oy ".id" manifest.*)" >> $GITHUB_ENV
-          echo "package_title=$(yq -oy ".title" manifest.*)" >> $GITHUB_ENV
+          PACKAGE_ID=$(start-cli s9pk inspect *.s9pk manifest | jq -r '.id')
+          PACKAGE_TITLE=$(start-cli s9pk inspect *.s9pk manifest | jq -r '.title')
+          echo "package_id=${PACKAGE_ID}" >> $GITHUB_ENV
+          echo "package_title=${PACKAGE_TITLE}" >> $GITHUB_ENV
+          printf "\n SHA256SUM: $(sha256sum ${PACKAGE_ID}.s9pk) \n"
         shell: bash
 
       - name: Generate sha256 checksum
         run: |
-          PACKAGE_ID=${{ env.package_id }}
-          printf "\n SHA256SUM: $(sha256sum ${PACKAGE_ID}.s9pk) \n"
           sha256sum ${PACKAGE_ID}.s9pk > ${PACKAGE_ID}.s9pk.sha256
         shell: bash
 
       - name: Generate changelog
         run: |
-          PACKAGE_ID=${{ env.package_id }}
           echo "## What's Changed" > change-log.txt
-          yq -oy '.release-notes' manifest.* >> change-log.txt
+          echo "" >> change-log.txt
+
+          RELEASE_NOTES=$(start-cli s9pk inspect *.s9pk manifest | jq -r '.releaseNotes')
+          echo "${RELEASE_NOTES}" >> change-log.txt
+
           echo "## SHA256 Hash" >> change-log.txt
           echo '```' >> change-log.txt
-          sha256sum ${PACKAGE_ID}.s9pk >> change-log.txt
+          sha256sum ${{ env.package_id }}.s9pk >> change-log.txt
           echo '```' >> change-log.txt
         shell: bash
 
