--- a/.github/workflows/buildService.yml
+++ b/.github/workflows/buildService.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Prepare StartOS SDK
-        uses: start9Labs/sdk@v2
+        uses: start9labs/sdk@v2
 
       - name: Checkout services repository
         uses: actions/checkout@v4
@@ -30,6 +30,7 @@ jobs:
           echo "package_id=${PACKAGE_ID}" >> $GITHUB_ENV
           printf "\n SHA256SUM: $(sha256sum ${PACKAGE_ID}.s9pk) \n"
         shell: bash
+
       - name: Upload .s9pk
         uses: actions/upload-artifact@v4
         with:
