--- a/.github/workflows/releaseService.yml
+++ b/.github/workflows/releaseService.yml
@@ -12,7 +12,7 @@ jobs:
       contents: write
     steps:
       - name: Prepare StartOS SDK
-        uses: start9Labs/sdk@v2
+        uses: start9labs/sdk@v2
 
       - name: Checkout services repository
         uses: actions/checkout@v4
@@ -20,15 +20,22 @@ jobs:
           submodules: recursive
 
       - name: Build the service package
+        id: build
+        env:
+          S9DEVKEY: ${{ secrets.S9DEVKEY }}
         run: |
           start-cli init
+          if [[ -n "$S9DEVKEY" ]]; then
+            echo "Using developer key from secrets to sign the package."
+            printf '%s' "$S9DEVKEY" > ~/.startos/developer.key.pem
+          else
+            echo "Using newly generated developer key to sign the package."
+          fi
           RUST_LOG=debug RUST_BACKTRACE=1 make
-
-      - name: Setting package ID and title from the manifest
-        id: package
-        run: |
-          PACKAGE_ID=$(start-cli s9pk inspect *.s9pk manifest | jq -r '.id')
-          PACKAGE_TITLE=$(start-cli s9pk inspect *.s9pk manifest | jq -r '.title')
+          sleep 2
+          MANIFEST_JSON=$(start-cli s9pk inspect *.s9pk manifest)
+          PACKAGE_ID=$(echo "$MANIFEST_JSON" | jq -r '.id')
+          PACKAGE_TITLE=$(echo "$MANIFEST_JSON" | jq -r '.title')
           echo "package_id=${PACKAGE_ID}" >> $GITHUB_ENV
           echo "package_title=${PACKAGE_TITLE}" >> $GITHUB_ENV
           printf "\n SHA256SUM: $(sha256sum ${PACKAGE_ID}.s9pk) \n"
@@ -36,17 +43,15 @@ jobs:
 
       - name: Generate sha256 checksum
         run: |
-          sha256sum ${PACKAGE_ID}.s9pk > ${PACKAGE_ID}.s9pk.sha256
+          sha256sum ${{ env.package_id }}.s9pk > ${{ env.package_id }}.s9pk.sha256
         shell: bash
 
       - name: Generate changelog
         run: |
           echo "## What's Changed" > change-log.txt
           echo "" >> change-log.txt
-
-          RELEASE_NOTES=$(start-cli s9pk inspect *.s9pk manifest | jq -r '.releaseNotes')
+          RELEASE_NOTES=$(start-cli s9pk inspect *.s9pk manifest | jq -r '.releaseNotes') 
           echo "${RELEASE_NOTES}" >> change-log.txt
-
           echo "## SHA256 Hash" >> change-log.txt
           echo '```' >> change-log.txt
           sha256sum ${{ env.package_id }}.s9pk >> change-log.txt
@@ -66,12 +71,13 @@ jobs:
 
       - name: Publish to Registry
         env:
-          S9USER: ${{ secrets.S9USER }}
-          S9PASS: ${{ secrets.S9PASS }}
+          S9DEVKEY: ${{ secrets.S9DEVKEY }}
           S9REGISTRY: ${{ secrets.S9REGISTRY }}
         run: |
-          if [[ -z "$S9USER" || -z "$S9PASS" || -z "$S9REGISTRY" ]]; then
-            echo "Publish skipped: missing registry credentials."
+          if [[ -z "$S9DEVKEY" || -z "$S9REGISTRY" ]]; then
+          echo "Publish skipped: One or both of S9DEVKEY and S9REGISTRY secrets are not set."
           else
-            start-sdk publish https://$S9USER:$S9PASS@$S9REGISTRY ${{ env.package_id }}.s9pk
+          echo "Publishing package to registry..."
+          start-cli --registry https://$S9REGISTRY registry package add ${{ env.package_id }}.s9pk ${{ github.server_url }}/${{ github.repository }}/releases/download/${{ github.ref_name }}/${{ env.package_id }}.s9pk
           fi
+        shell: bash
