update StartOS SDK, cloudflared to 2025.10.1

--- a/.github/workflows/buildService.yml
+++ b/.github/workflows/buildService.yml
@@ -101,7 +101,7 @@ jobs:
           DOCKER_BUILDKIT: 1
           BUILDKIT_PROGRESS: plain
         run: |
-          start-cli init
+          start-cli init-key
           chmod 600 ~/.startos/developer.key.pem
 
           echo "🏗️ Building ARM package:"
@@ -323,7 +323,7 @@ jobs:
           DOCKER_BUILDKIT: 1
           BUILDKIT_PROGRESS: plain
         run: |
-          start-cli init
+          start-cli init-key
           chmod 600 ~/.startos/developer.key.pem
 
           echo "🏗️ Building Intel package:"
@@ -542,7 +542,7 @@ jobs:
           DOCKER_BUILDKIT: 1
           BUILDKIT_PROGRESS: plain
         run: |
-          start-cli init
+          start-cli init-key
           chmod 600 ~/.startos/developer.key.pem
 
           echo "⚡ Building universal package with MAXIMUM cache optimization:"
